k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    -  http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: backend-srv
              servicePort: 5000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 3000
